Minor formatting fixes to the deploy docs